--- a/templates/index.html
+++ b/templates/index.html
@@ -57,9 +57,9 @@
                     </div>
                 </form>
             </div>
+            <div id="messages"></div>
         </div>     
         <script src="/static/js/script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
     </body>
 </html>
-
-
